[package]
name = "rouille"
version = "3.6.2"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tomaka/rouille"
documentation = "http://docs.rs/rouille"
description = "High-level idiomatic web framework."
readme = "README.md"
keywords = ["web", "framework", "http", "rest"]
categories = ["web-programming::http-server", "web-programming::websocket"]
resolver = "2"

[features]
default = ["gzip", "brotli", "ssl"]
gzip = ["deflate"]
ssl = ["tiny_http/ssl-mbedtls"]
rustls = ["tiny_http/ssl-rustls"]

[dependencies]
base64 = "0.21"
brotli = { version = "3.4.0", optional = true }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
deflate = { version = "1.0.0", optional = true, features = ["gzip"] }
multipart = { version = "0.18", default-features = false, features = ["server"] }
percent-encoding = "2"
rand = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
time = { version = "0.3.29", features = [ "local-offset" ] }
tiny_http = { path = "../tiny-http", default-features = false }
url = "2"
threadpool = "1"
sha1_smol = "1.0.0"

[target.'cfg(not(target_env="sgx"))'.dependencies]
filetime = "0.2.0"

[dev-dependencies]
log = "0.4"

[target.'cfg(not(target_env="sgx"))'.dev_dependencies]
postgres = { version = "0.19", default-features = false }

[package.metadata.fortanix-sgx]
  threads = 100